--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "lucide-react": "^0.487.0",
     "lucide-svelte": "^0.487.0",
     "match-sorter": "^8.0.0",
+    "radix-ui": "^1.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-label": "^0.0.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "sort-by": "^0.0.2",
